# wordle

./: Cargo.toml  README.md  shell.nix
.cargo/: config.toml
benches/: best_guess.rs
nix/: sources.json
src/: lib.rs  main.rs
