[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "best_guess"
harness = false

[profile.release]
lto = true
codegen-units = 1
